# Skillbox_HW_25_2

./: CMakeLists.txt
include/: cpu.h  disk.h  gpu.h  kdb.h  ram.h
source/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  kdb.cpp  main.cpp  ram.cpp
